--- a/css/style.css
+++ b/css/style.css
@@ -21,17 +21,17 @@ a{
 .container{
   height: 100%;
   width: 1170px;
-  margin: auto;
+  margin: 0 auto 0 auto;
   display: flex;
   flex-wrap: wrap;
 }
 #navbar .container .logo{
   width: 30%;
-  display: inline-block;
+  display:block;
 }
 #navbar .logo a img{
-  padding: 16px 0 32px 0;
-  display: block;
+  padding: 15px 0 0 0;
+  display: inline-block;
 }
 #navbar .container .menu-list{
   width: 70%;
