--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ img{
   background-size: cover;
   position: relative;
   overflow: hidden;
+  border-bottom: 3px solid #42b1e0;
 }
 #banner .container{
   height: 100%;
@@ -142,23 +143,102 @@ img{
    font-size: 18px;
    font-weight: 300;
  }
- #banner .banner_items .available .icon a span{
-   display: inline-block;
-  width: 50px;
-  height: 50px;
-  background-color:#171a1f;
-  color:#42b1e0;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 50px;
-  font-size: 28px;
+ #banner .banner_items .available .icon{
+   display: flex;
  }
- #banner .banner_items .available .icon a:nth-child(1) span{
+ #banner .banner_items .available .icon a{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 50px;
+   height: 50px;
+   background-color:#171a1f;
+   color:#42b1e0;
+   border-radius: 50%;
+   font-size: 28px;
+ }
+ #banner .banner_items .available .icon:nth-child(1) a{
    margin-left: 20px;
  }
- #banner .banner_items .available .icon a:nth-child(2) span{
+ #banner .banner_items .available .icon:nth-child(2) a{
   margin-left: 16px;
 }
 /* banner part css end */
+
+/* features part css start  */
+#features{
+  min-height: 581px;
+  background-color: #f9f9f9;
+  border-bottom: 1px solid #e7e7e7;
+}
+#features .container{
+  height: 100%;
+}
+#features .row{
+  height: 100%;
+}
+/* features_heading part css */
+ #features .features_heading{
+  margin: 50px auto 0 auto;
+}
+#features .features_heading h2{
+ font-size: 36px;
+ font-weight: 900;
+}
+#features .features_heading p{
+  font-size: 20px;
+  font-weight: 300;
+  text-align: center;
+}
+/* features_items part css */
+#features .features_items{
+width: 100%;
+display: flex;
+justify-content: space-around;
+margin-top: 72px;
+}
+#features .features_items .features_details{
+  width: 222px;
+}
+#features .features_items .features_details .features_icon{
+  display: block;
+  height: 145px;
+  width: 145px;
+  background-color: #42b1e0;
+  border-radius: 50%;
+  border: 3px solid #efefef;
+  margin: 0 36px 0 36px
+}
+#features .features_items .features_details .features_icon a{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  color: white;
+}
+#features .features_items .features_details .features_content{
+  text-align: center;
+  margin-top: 30px;
+}
+#features .features_items .features_details .features_content h3{
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: 700;
+  color: #414042;
+  transition: all 0.4s linear;
+}
+#features .features_items .features_details .features_content p{
+  color:#969696;
+  font-size: 13px;
+  font-weight: 400;
+  margin-top: 26px;
+}
+#features .features_items .features_details .features_content:hover h3{
+  color: #42b1e0;
+}
+/* features part css end  */
+
 
 
