gallery part added

--- a/css/style.css
+++ b/css/style.css
@@ -178,14 +178,18 @@ img{
   height: 100%;
 }
 /* features_heading part css */
- #features .features_heading{
+ #features .features_heading,
+ #gallery .gallery_heading{
   margin: 50px auto 0 auto;
 }
-#features .features_heading h2{
+#features .features_heading h2,
+#gallery .gallery_heading h2{
  font-size: 36px;
  font-weight: 900;
+ text-align: center;
 }
-#features .features_heading p{
+#features .features_heading p,
+#gallery .gallery_heading p{
   font-size: 20px;
   font-weight: 300;
   text-align: center;
@@ -198,7 +202,7 @@ justify-content: space-around;
 margin-top: 72px;
 }
 #features .features_items .features_details{
-  width: 222px;
+  width: 280px;
 }
 #features .features_items .features_details .features_icon{
   display: block;
@@ -207,7 +211,7 @@ margin-top: 72px;
   background-color: #42b1e0;
   border-radius: 50%;
   border: 3px solid #efefef;
-  margin: 0 36px 0 36px
+  margin: 0 auto;
 }
 #features .features_items .features_details .features_icon a{
   height: 100%;
@@ -239,6 +243,60 @@ margin-top: 72px;
   color: #42b1e0;
 }
 /* features part css end  */
+
+/* gallery part css start */
+#gallery{
+  min-height: 576px;
+}
+#gallery .container{
+  height: 100%;
+}
+#gallery .row{
+  height: 100%;
+}
+#gallery .gallery_items{
+width: 100%;
+display: flex;
+justify-content: space-around;
+margin-top: 72px;
+}
+#gallery .gallery_items .gallery_details{
+  width: 270px;
+}
+#gallery .gallery_items .gallery_details .gallery_box{
+  position: relative;
+  display: block;
+  height: 200px;
+  width: 100%;
+  background-color: #42b1e0;
+  border-radius: 10px;
+  margin: 0 auto;
+}
+#gallery .gallery_items .gallery_details .gallery_box p{
+  position: absolute;
+  background-color: #447084;
+  color: #42b1e0;
+  height: 40px;
+  width: 100%;
+  bottom: 0;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 10px 0;
+  border-radius: 0 0 10px 10px;
+}
+#gallery .gallery_items .gallery_details .gallery_content{
+  width: 100%;
+  margin-top: 24px;
+  text-align: center;
+}
+#gallery .gallery_items .gallery_details .gallery_content p{
+  padding: 0 22px ;
+  color:#969696;
+  font-size: 13px;
+  font-weight: 400;
+}
+/* gallery part css end */
+
 
 
 
